feat & style: - status text wont show for non friends in message header - modified filenames to use Chat prefix - added lastActionUserId param to getAllFriendships - made add friend button reactive to unblocking, blocker, blocked, pending, accepting and already friends - filter out non accepted friends for sse read events - remove dm and options dropdown for blocked users
